--- a/style.css
+++ b/style.css
@@ -4,22 +4,31 @@
 }
 
 .navbarSection {
-    background-color: rgb(24, 54, 83);
+    background-color: rgba(44, 62, 80);
     height: 70px;
     display: flex;
     align-items: center;
-    padding: 16px;
     justify-content: space-between;
-    padding-right: 150px;
+    padding: 0 150px;
 }
 
 #navHeader {
     color: white;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+.sectionabout {
+    background-color:  rgb(26, 188, 156);
+    height: 450px;
+    align-items: center;
+    justify-content: space-between;
+   color:  white;
+   text-align: center;
+   font-size: 3rem;
+  
+}
+
 
 .listItems {
-    width: 200px;
     display: flex;
 }
 
@@ -27,32 +36,112 @@
     margin-right: 15px;
     color: white;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    transition: ease-in-out .2s;
+    transition: ease-in-out 0.2s;
 }
 
-.item:hover{
-    color: rgb(0, 255, 98);
+.item:hover {
+    color: yellow;
     cursor: pointer;
 }
 
 .hero-section {
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    min-height: 550px;
-    padding:20px;
-    background-color: rgb(67, 1, 189);
-}
-
-.profile {
-    text-align: center;
-    width: 350px;
-    height: 350px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-
-
-    
-
+    height: 550px;
+    background-color: rgb(26, 188, 156);
+    text-align: center;
 }
+
+.img-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.adam {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 20px;
+}
+
+.hero-section h6 {
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: white;
+    font-size: 3rem;
+}
+
+.section-2 h6 {
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: black;
+    font-size: 2rem;
+}
+
+.line1{
+    width: 100px;
+    height: 4px;
+    background-color: white;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+.line2{
+    width: 100px;
+    height: 4px;
+    margin-top: 15px;
+    margin-left: 15px;
+    background-color: white;
+}
+
+.simvollar{
+    display: flex;
+    justify-content: center;
+}
+
+.ulduz{
+    width: 20px;
+    height: 20px;
+    color: white;
+    fill: white;
+}
+
+
+svg{
+    width: 40px;
+    height: 40px;
+}
+
+.hero-section h6 {
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color: white;
+    font-size: 3rem;
+}
+.line1-1{
+    width: 100px;
+    height: 4px;
+    background-color: black;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+.line2-1{
+    width: 100px;
+    height: 4px;
+    margin-top: 15px;
+    margin-left: 15px;
+    background-color: black;
+}
+
+
+    #photos {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-left: 250px; 
+        margin-right: 250px; 
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #photos img {
+        width: 250px;
+        margin: 10px;
+    }
